# app/Models/User.php
@@ -24,6 +24,7 @@ class User extends Authenticatable implements JWTSubject
     protected $fillable = [
         'name',
         'email',
+        'terminal_id',
         'password',
     ];
 
